--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -1,5 +1,18 @@
-<h2><%= @restaurant.name %></h2>
-<p><%= @restaurant.address %></p>
-<p><%= @restaurant.phone_number %></p>
-<p><%= @restaurant.category %></p>
+<div class="container">
+  <h2><%= @restaurant.name %></h2>
+  <h5>Address:</h5>
+  <p><%= @restaurant.address %></p>
+  <h5>Phone number:</h5>
+  <p><%= @restaurant.phone_number %></p>
+  <h5>Category:</h5>
+  <p><%= @restaurant.category %></p>
 
+  <h5>Reviews:</h5>
+  <ul>
+    <% @reviews.each do |rev| %>
+      <li><%= rev.content %> <%= "⭐" * rev.rating %></li>
+    <% end %>
+  </ul>
+  <br>
+  <%= link_to '✏️ Add new review', new_restaurant_review_path(@restaurant), class: "btn btn-warning"%>
+ </div>
